# AudioMid

./: .eslintrc.js  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  package.json  pnpm-lock.yaml  tailwind.config.js
.erb/configs/: .eslintrc  webpack.config.renderer.dev.ts  webpack.config.renderer.prod.ts
.github/: FUNDING.yml
.github/workflows/: build-and-release.yml  publish.yml  test.yml
assets/: defaultSystemPrompt.md  entitlements.mac.plist
assets/wasm/: soxr_wasm.wasm  soxr_wasm_thread.wasm
release/app/: package.json  pnpm-lock.yaml
src/audio/: audio-provider-factory.ts  audio-provider-interface.ts  pcm16.ts  pipeline.ts  resampler.ts
src/audio/providers/: gemini-provider.ts  openai-provider.ts
src/common/: defaultPrompt.ts
src/gemini/: live-api.ts
src/main/: audio-capture.ts  database.ts  main.ts  preload.ts  privacy.ts
src/native/: audio_capture_addon.cpp  window_privacy.cpp  window_privacy_binding.gyp
src/native/audio-capture/: audio_buffer.cpp  audio_buffer.h  audio_capture_base.cpp  audio_capture_base.h  audio_format_converter.cpp  audio_format_converter.h  linux_audio_capture.cpp  linux_audio_capture.h  macos_audio_capture.h  macos_audio_capture.mm  windows_audio_capture.cpp  windows_audio_capture.h
src/native/webrtc-vad/: fvad.c  vad_wrapper.cpp  vad_wrapper.h
src/openai/: chat.ts  realtime.ts
src/renderer/: App.css  App.tsx  AudioAIInterface.tsx  Settings.tsx  index.ejs  preload.d.ts
src/renderer/components/: LoadingScreen.tsx  MarkdownRenderer.tsx  Settings.tsx
src/renderer/contexts/: ThemeContext.tsx
v8-compile-cache-0/12.4.254.21-node.22/: zSproject.BLOB  zSproject.MAP  zSprojectzSnode_moduleszS.pnpmzSts-node@10.9.2_@types+node@22.13.10_typescript@5.8.3zSnode_moduleszSts-nodezSdistzSbin.js.BLOB  zSprojectzSnode_moduleszS.pnpmzSts-node@10.9.2_@types+node@22.13.10_typescript@5.8.3zSnode_moduleszSts-nodezSdistzSbin.js.MAP
